--- a/ACCTOnlineLibraryManagementSystem/Web.config
+++ b/ACCTOnlineLibraryManagementSystem/Web.config
@@ -7,6 +7,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -60,5 +61,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="ACCTOnlineLibraryEntities" connectionString="metadata=res://*/ACCTDataModel.csdl|res://*/ACCTDataModel.ssdl|res://*/ACCTDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=ACCTOnlineLibrary;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ACCTOnlineLibraryEntities1" connectionString="metadata=res://*/ACCTOnlineLibraryModel.csdl|res://*/ACCTOnlineLibraryModel.ssdl|res://*/ACCTOnlineLibraryModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=ACCTOnlineLibrary;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
